syntax = "proto3";

option go_package = "article/v1;articlev1";


import "google/protobuf/timestamp.proto";

service ArticleService {
  rpc Save(SaveRequest) returns (SaveResponse);
  rpc Publish(PublishRequest) returns (PublishResponse);
  rpc Withdraw(WithdrawRequest) returns (WithdrawResponse);
  rpc GetByAuthor(GetByAuthorRequest) returns (GetByAuthorResponse);
  rpc GetById(GetByIdRequest) returns (GetByIdResponse);
  rpc GetPubById(GetPubByIdRequest) returns (GetPubByIdResponse);
  rpc ListPub(ListPubRequest) returns (ListPubResponse);
}

message Article {
  int64 id = 1;
  int64 author_id = 2;
  string title = 3;
  string content = 4;
  int32 status = 5;
  google.protobuf.Timestamp ctime = 6;
  google.protobuf.Timestamp utime = 7;
}

message SaveRequest {
  Article article = 1;
}
message SaveResponse {
  int64 id = 1;
}

message PublishRequest {
  Article article = 1;
}
message PublishResponse {
  int64 id = 1;
}

message WithdrawRequest {
  int64 uid = 1;
  int64 id = 2;
}
message WithdrawResponse {}

message GetByAuthorRequest {
  int64 uid = 1;
  int32 offset = 2;
  int32 limit = 3;
}
message GetByAuthorResponse {
  repeated Article articles = 1;
}

message GetByIdRequest {
  int64 id = 1;
}
message GetByIdResponse {
  Article article = 1;
}

message GetPubByIdRequest {
  int64 id = 1;
  int64 uid = 2;
}
message GetPubByIdResponse {
  Article article = 1;
}

message ListPubRequest {
  google.protobuf.Timestamp start = 1;
  int32 offset = 2;
  int32 limit = 3;
}
message ListPubResponse {
  repeated Article articles = 1;
}